--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.5.1",
     "node-sass": "^5.0.0",
     "popper.js": "^1.16.1",
+    "react": "^17.0.1",
     "sass": "^1.32.0",
     "script": "^0.1.4",
     "sweetalert2": "^10.12.6"
